--- a/src/app/main/content.component.html
+++ b/src/app/main/content.component.html
@@ -2,25 +2,25 @@
     <app-nav />
 
     <div class="selector-container">
-        <div class="search-container">
-            <mat-icon fontIcon="search" class="search-icon" />
+        <div class="search-container input-group fix-height mr-5" style="width: 20%;">
+            <span><mat-icon fontIcon="search" class="search-icon" /></span>
             <input class="form-control search-pan" type="text" placeholder="Search by user" />
         </div>
-        <div class="form-group fix-height">
+        <div class="form-group fix-height mr-5" style="width: 15%;">
             <label>View by Label</label>
             <mat-slide-toggle />
         </div>
-        <div class="form-group fix-height">
+        <div class="form-group fix-height mr-5" style="width: 15%;">
             <label class="active">View by Label</label>
             <mat-slide-toggle />
         </div>
-        <div class="form-group fix-height">
+        <div class="form-group fix-height mr-5" style="width: 30%;">
             <button class="btn btn-dark active">1DAY</button>
             <button class="btn btn-dark">7 DAYS</button>
             <button class="btn btn-dark">30 DAYS</button>
             <button class="btn btn-dark">ALL</button>
         </div>
-        <div>
+        <div class="flex-end mr-5" style="width: 20%;">
             <select class="form-control fix-height">
                 <option>High To Low</option>
             </select>
