--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -28,11 +28,14 @@
                 <rect width="4.00836" height="75.7405" transform="matrix(-1 0 0 1 1.44592 68.3633)" fill="#F5F5F5"/>
                 <rect width="4.00802" height="30.1654" transform="matrix(-1 0 0 1 14.326 91.1523)" fill="#F5F5F5"/>
                 </g>
-            </svg>                
+            </svg>      
         </div>
         <div class="footer-start-title">
-            <div class="footer-title-1">Mever miss a beat!</div>
-            <div class="footer-title-2">Subscribe to our email list to get drop reminders, special perks <br> and the lastest Meezer updates delivered right to your inbox.</div>
+            <div class="footer-title-1">Never miss a beat!</div>
+            <div class="footer-title-2">
+                <p>Subscribe to our email list to get drop reminders, special perks and</p> 
+                <p>the lastest Meezer updates delivered right to your inbox.</p>
+            </div>
             <div class="footer-emial-box">
                 <input type="text" placeholder="Email Adress" class="form-control color-white" />
                 <button class="btn btn-subscribe ">Subscribe</button>
@@ -82,46 +85,46 @@
                 </svg>  
             </div>
             <div class="footer-main-left-middle">
-                Subscribe to our email list to receive notifications about new drops, exclusive benefits and updates on Meezer straight to your inbox
+                <p>Subscribe to our email list to receive notifications</p>
+                <p>about new drops, exclusive benefits and updates on</p>
+                <p>Meezer straight to your inbox</p>
             </div>
             <div class="footer-main-left-bottom">
-                <input type="text" placeholder="Email Adress" class="form-control dark color-white" />
+                <input type="text" placeholder="Email address" class="form-control dark color-white" />
                 <button class="btn btn-subscribe ">Subscribe</button>
             </div>
         </div>
-        <div class="footer-main-right">
-            <div class="footer-main-list">
-                <p>Fans</p>
-                <ul>
-                    <li>How it works</li>
-                    <li>Benefits</li>
-                    <li>Our Artists</li>
-                    <li>Current Drop</li>
-                    <li>Drop Schedule</li>
-                </ul>
-            </div>
-            <div class="footer-main-list">
-                <p>Artists</p>
-                <ul>
-                    <li>Join Musica</li>
-                </ul>
-            </div>
-            <div class="footer-main-list">
-                <p>Support</p>
-                <ul>
-                    <li>FAQs</li>
-                    <li>Help Center</li>
-                </ul>
-            </div>
-            <div class="footer-main-list">
-                <p>Collection</p>
-                <ul>
-                    <li>About</li>
-                    <li>Contact</li>
-                    <li>Login</li>
-                    <li>Sign Up</li>
-                </ul>
-            </div>
+        <div class="footer-main-list">
+            <p>Fans</p>
+            <ul>
+                <li>How it works</li>
+                <li>Benefits</li>
+                <li>Our Artists</li>
+                <li>Current Drop</li>
+                <li>Drop Schedule</li>
+            </ul>
+        </div>
+        <div class="footer-main-list">
+            <p>Artists</p>
+            <ul>
+                <li>Join Musica</li>
+            </ul>
+        </div>
+        <div class="footer-main-list">
+            <p>Support</p>
+            <ul>
+                <li>FAQs</li>
+                <li>Help Center</li>
+            </ul>
+        </div>
+        <div class="footer-main-list">
+            <p>Collection</p>
+            <ul>
+                <li>About</li>
+                <li>Contact</li>
+                <li>Login</li>
+                <li>Sign Up</li>
+            </ul>
         </div>
     </div>
     <div class="footer-end">
