--- a/src/app/main/content.component.css
+++ b/src/app/main/content.component.css
@@ -1,11 +1,30 @@
 .app-content{
     background-color: #110B1D;
-    min-height: 100vw;
-    padding: 2vw 8vw;
+    padding: 20px 80px;
+    padding-bottom: 464px;
+}
+
+.content-title{
+    width: 100%;
+    font-family: "Kanit";
+    font-size: 61px;
+    color: #FFFFFF;
+    font-weight: 700;
+    display: flex;
+    justify-content: center;
+    padding-top: 91px;
+}
+
+.selector-container{
+    padding-top: 53px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 15px;
 }
 
 .search-pan{
-    background-color: #0F0A1A;
+    background-color: #0F0A1A;;
 }
 
 .input-group{
@@ -14,27 +33,34 @@
 }
 .input-group span{
     border: 1px solid #E7E7E840;
-    border-top-left-radius: 5px;
+    border-right: 0px;
+    border-top-left-radius: 9px;
     border-bottom-left-radius: 5px;
     color: #FFFFFF;
-    width: 20%;
-    
+    padding-left: 12.64px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-mat-icon{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.input-group .material-icons {
-    font-size: 1.7vw;
+
+.input-group .mat-icon{
+    width: 24px;
+    height: 24px;
 }
 
 .input-group input{
     border-top-left-radius: 0px;
     border-bottom-left-radius: 0px;
+    border-left: 0px;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 25.6px;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+
+    font-family: "Open Sans";
+    padding: 14px 12px;
 }
 
 .form-group label{
@@ -45,20 +71,12 @@ mat-icon{
     opacity: 1;
 }
 
-.selector-container{
-    padding-top: 5vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-}
-
 .mr-5{
     margin-right: 0.5vw;
 }
 
 .table-container{
-    padding-top: 5vw;
+    padding-top: 39px;
 }
 
 .mat-mdc-slide-toggle {
@@ -73,6 +91,59 @@ mat-icon{
 .form-control{
     width: 100%;
 }
+
+.app-toggle {
+    width: 37px;
+    height: 22px;
+    background: #333;
+    position: relative;
+    border-radius: 50px;
+    box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.5), 0px 1px 0px rgba(255, 255, 255, 0.2);
+    label {
+      opacity: 1;
+      display: block;
+      width: 19px;
+      height: 19px;
+      position: absolute;
+      top: 2px;
+      left: 4px;
+      cursor: pointer;
+      background: #fcfff4;
+      border-radius: 50px;
+      transition: all 0.2s ease;
+    }
+    input[type=checkbox] {
+      visibility: hidden;
+      &:checked + label {
+        left: 15px;
+        background: #FF5A00;
+      }  
+    }
+  }
+
+  select.form-control {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 25.6px;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    background-color: #0F0A1A;
+    border-radius: 9px;
+    font-family: "Open Sans";
+    padding: 14px 15px;
+
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-image: url("data:image/svg+xml;utf8,<svg width='12' height='7' viewBox='0 0 12 7' fill='none' xmlns='http://www.w3.org/2000/svg'><path d='M11.1094 1.8125L6.35938 6.28125C6.20312 6.4375 6.01562 6.5 5.85938 6.5C5.67188 6.5 5.48438 6.4375 5.32812 6.3125L0.578125 1.8125C0.265625 1.53125 0.265625 1.0625 0.546875 0.75C0.828125 0.4375 1.29688 0.4375 1.60938 0.71875L5.85938 4.71875L10.0781 0.71875C10.3906 0.4375 10.8594 0.4375 11.1406 0.75C11.4219 1.0625 11.4219 1.53125 11.1094 1.8125Z' fill='white'/></svg>");
+    background-repeat: no-repeat;
+    background-position-x: 90%;
+    background-position-y: 50%;
+}
+
+
+
 
 
 
