--- a/src/styles.css
+++ b/src/styles.css
@@ -32,24 +32,31 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .form-control{
     border: 1px solid #E7E7E840;
-    border-radius: 5px;
-    padding: 0.5vw 0.4vw;
+    border-radius: 9px;
     background-color: #0F0A1A;
     outline: none;
     color: #FFFFFF;
-    font-size: 0.8vw;
 }
 
 .btn{
-    padding: 0.5vw 0.6vw;
     border-radius: 5px;
     outline: none;
     border: none;
-    margin-left: 2vw;
     cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.btn-group{
+    border: 1px solid #E7E7E840;
+    border-radius: 9px;
+    padding: 13px 15px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    gap: 5px;
 }
 
 .btn-dark{
@@ -62,15 +69,33 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     color: #0F0A1A;
 }
 
+.btn-group .btn{
+    flex-grow: 1;
+    padding: 5px 0.5em;
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 18px;
+    text-align: center;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+}
+
 .form-group{
-    display: flex;
-    align-items: center;
     color: #FFFFFF;
     border: 1px solid #E7E7E840;
-    border-radius: 5px;
-    padding: 0.5vw 0.4vw;
-    font-size: 0.8vw;
+    border-radius: 9px;
+    padding: 14px 15px;
+    font-size: 16px;
+    font-family: "Open Sans";
+    line-height: 25.6px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 11px;
 }
+
+
 
 .form-group .btn{
     font-size: 0.8vw;
@@ -78,24 +103,53 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .table{
     width: 100%;
-    font-size: 1vw;
+    border-collapse: collapse;
 }
 
 .table td, .table th{
-    padding: 1vw 1vw;
+    padding: 9px 21px;
 }
 
-.table > :not(caption) > * > * {
-    background-color: #0F0A1A;
+.table tr td:first-child{
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
 }
+
+.table tr td:last-child{
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
 
 .table-header th{
+    font-family: Kanit;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22.4px;
+    letter-spacing: 0.15em;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+
     color: #E7E7E8;
+    font-family: "Kanit";
+    letter-spacing: 1px;
+}
+
+.table td{
+    font-family: "Open Sans";
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 25.6px;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
 }
 
 .table tr, .table th, .table td{
     border: none;
     border-collapse: collapse;
+    text-align: left;
 }
 
 .table-body tr td:nth-child(1){
@@ -123,15 +177,22 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     border: none;
 }
 
+.table-striped > tbody > td{
+    background-color: #100a1b;
+}
+
 .table-striped > tbody > tr:nth-of-type(odd) > * {
     background-color: #262131;
+    ;
 }
 
-.text-cetner{
-    text-align: center;
+.flex-grow-2{
+    flex-grow: 2;
 }
-
-.fix-height{
-    height: 3.5vw;
+.flex-grow-3{
+    flex-grow: 3;
+}
+.flex-grow-4{
+    flex-grow: 4;
 }
 
