--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -23,7 +23,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    width: 30%;
+    /* width: 30%; */
     position: relative;
 }
 
@@ -36,7 +36,7 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    width: 30%;
+    /* width: 30%; */
     position: relative;
 }
 
@@ -126,7 +126,7 @@
     align-content: stretch;
     align-items: stretch;
     gap: 10px;
-    flex-grow: 1;
+    flex-grow: 3;
 }
 
 .footer-main-left-top{
@@ -199,7 +199,6 @@
     text-decoration-skip-ink: none;
     flex-grow: 1;
     color: #E7E7E8;
-    padding-right: 20px;
 }
 
 .footer-main-list > p{
